# BCALfine

./: README.md  cosmics_datafilter.C  data_eventselector.C  data_fits.C  mc_eventselector.C  mc_fits.C
BCALfine/: CMakeLists.txt  G4History.macro  finestructure.cc  run.mac
BCALfine/analyzer/: compile.sh  make_plots  make_plots.cc
BCALfine/include/: BasePlateParameterisation.hh  DataManager.hh  DetectorConstruction.hh  EventAction.hh  MCEvent.hh  MCEventLinkDef.h  ModuleParameterisation.hh  PhysicsList.hh  PhysicsListMessenger.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorMessenger.hh  RunAction.hh  RunActionMessenger.hh  StepMax.hh  StepMaxMessenger.hh  SteppingAction.hh  SteppingAction.hh~
BCALfine/macro/: vis.mac
BCALfine/src/: BasePlateParameterisation.cc  DataManager.cc  DetectorConstruction.cc  EventAction.cc  MCEvent.cc  MCEvent.cc~  MCEventDict.cc  MCEventDict.h  MCEventDict_rdict.pcm  ModuleParameterisation.cc  PhysicsList.cc  PhysicsListMessenger.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorMessenger.cc  RunAction.cc  RunActionMessenger.cc  StepMax.cc  StepMaxMessenger.cc  SteppingAction.cc  SteppingAction.cc~
bcal_points/: JEventProcessor_bcal_points.cc  JEventProcessor_bcal_points.h
